--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,12 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": {
+      "angular-images-component": [
+        "dist/angular-images-component/angular-images-component",
+        "dist/angular-images-component"
+      ]
+    },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
