--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "angular-images-component",
+  "name": "@master/images.component.angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint"
   },
@@ -21,6 +21,7 @@
     "@master/file-center.angular": "^2.0.23",
     "ngx-sortablejs": "^11.1.0",
     "rxjs": "~6.6.0",
+    "sortablejs": "^1.13.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
